--- a/.github/workflows/run_core.yml
+++ b/.github/workflows/run_core.yml
@@ -30,6 +30,6 @@ jobs:
       workflow: ${{ github.workflow }}
       run_id: ${{ github.run_id }}
       run_number: ${{ github.run_number }}
-      flag_label: ci:bot_issue
+      flag_label: bot:issue
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
