test(python): rewrite unsupported-compression test for legacy path
Now that DECODE is always registered, compress() produces models that
load successfully, making the old test wrong. Rewrite to inject raw
COMPRESSION_METADATA into the flatbuffer metadata via model_editor,
directly exercising the HasCompressionMetadata() detection path for
legacy-compressed models.

--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -122,7 +122,7 @@ py_test(
         ":runtime",
         requirement("numpy"),
         requirement("tensorflow"),
-        "//tensorflow/lite/micro/compression",
+        "//tensorflow/lite/micro/compression:model_editor",
     ],
 )
 
