test(compression): add tests for batched DECODE insertion
Add test_multiple_compressed_inputs_batched: a CONCATENATION with two
compressed tensor inputs, each with a different bitwidth, should
produce a single DECODE with 4 inputs and 2 outputs, each ancillary
tensor carrying its own distinct data. Marked expectedFailure until
the implementation lands.

Add test_mixed_compressed_and_uncompressed_inputs: a CONCATENATION with
one compressed and one plain input leaves the plain input untouched.
This already passes with the current code.

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -374,6 +374,7 @@ py_test(
         ":compressor",
         ":decode",
         ":decode_insert",
+        ":lut",
         ":model_editor",
         "//tensorflow/lite/python:schema_py",
         requirement("numpy"),
