--- a/.github/workflows/run_hexagon.yml
+++ b/.github/workflows/run_hexagon.yml
@@ -10,6 +10,10 @@ on:
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   call-suite-hexagon:
     uses: ./.github/workflows/suite_hexagon.yml
