--- a/.github/workflows/test_misc.yml
+++ b/.github/workflows/test_misc.yml
@@ -12,17 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     name: Code Style
+    container:
+      image: ghcr.io/tflm-bot/tflm-ci:0.6.5
     steps:
-      - uses: actions/setup-python@v6
-        with:
-          python-version: '3.10'
       - uses: actions/checkout@v6
         with:
           ref: ${{ inputs.trigger-sha }}
       - name: Check
-        uses: docker://ghcr.io/tflm-bot/tflm-ci:0.6.5
-        with:
-          args: /bin/sh -c "git config --global --add safe.directory /github/workspace && tensorflow/lite/micro/tools/ci_build/test_code_style.sh"
+        run: tensorflow/lite/micro/tools/ci_build/test_code_style.sh
 
   cpp_build_warnings:
     runs-on: ubuntu-latest
@@ -34,7 +31,7 @@ jobs:
           android: true
           dotnet: true
           haskell: true
-          docker-images: true
+          docker-images: false
           large-packages: false
           tool-cache: false
           swap-storage: false    
@@ -50,18 +47,13 @@ jobs:
     runs-on: ubuntu-latest
 
     name: Project Generation
+    container:
+      image: ghcr.io/tflm-bot/tflm-ci:0.6.5
     steps:
-      - uses: actions/setup-python@v6
-        with:
-          python-version: '3.10'
       - uses: actions/checkout@v6
         with:
           ref: ${{ inputs.trigger-sha }}
-      - name: Install dependencies
-        run: |
-          pip3 install Pillow
-          pip3 install numpy
       - name: Test
         run: |
-          cd ../
-          tflite-micro/tensorflow/lite/micro/tools/ci_build/test_project_generation.sh tflite-micro/
+          cd ..
+          workspace/tensorflow/lite/micro/tools/ci_build/test_project_generation.sh workspace/
