Fix Python module shadowing in Docker CI
Applies legacy_create_init = False to Python rules in BUILD files to prevent Bazel from automatically generating __init__.py files. This prevents the root 'signal/' directory (which contains C++ kernels but no Python source) from being treated as a Python package, which was shadowing the standard library 'signal' module and causing psutil failures in the tflm-ci Docker container.

--- a/python/tflite_micro/BUILD
+++ b/python/tflite_micro/BUILD
@@ -76,6 +76,7 @@ py_library(
     srcs = [
         "runtime.py",
     ],
+    legacy_create_init = False,
     data = [":_runtime.so"],
     target_compatible_with = INCOMPATIBLE_WITH_WINDOWS,
     visibility = ["//visibility:public"],
@@ -89,6 +90,7 @@ py_library(
 py_test(
     name = "runtime_test",
     srcs = ["runtime_test.py"],
+    legacy_create_init = False,
     tags = [
         "noasan",
         "nomsan",  # Python doesn't like these symbols in _runtime.so
@@ -107,6 +109,7 @@ py_test(
 py_test(
     name = "test_compression_unsupported",
     srcs = ["test_compression_unsupported.py"],
+    legacy_create_init = False,
     tags = [
         "noasan",
         "nomsan",  # Python doesn't like these symbols in _runtime.so
@@ -131,6 +134,7 @@ py_library(
     srcs = [
         "postinstall_check.py",
     ],
+    legacy_create_init = False,
     data = [
         "sine_float.tflite",
     ],
