Fix directory path in Docker workflows

--- a/.github/workflows/test_makefile.yml
+++ b/.github/workflows/test_makefile.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           tensorflow/lite/micro/tools/ci_build/test_makefile.sh
           cd ..
-          workspace/tensorflow/lite/micro/tools/ci_build/${{ matrix.script }} workspace/
+          tflite-micro/tensorflow/lite/micro/tools/ci_build/${{ matrix.script }} tflite-micro/
