--- a/ci/Dockerfile.micro
+++ b/ci/Dockerfile.micro
@@ -15,7 +15,7 @@
 #
 # --- Build and upload to GHCR.IO ---
 # (Run from the root of the TFLM repository)
-#   export TFLM_CI_VERSION=0.6.5
+#   export TFLM_CI_VERSION=0.6.6
 #   docker build --no-cache -f ci/Dockerfile.micro -t ghcr.io/tflm-bot/tflm-ci:$TFLM_CI_VERSION .
 #   docker push ghcr.io/tflm-bot/tflm-ci:$TFLM_CI_VERSION
 #
@@ -83,5 +83,4 @@ RUN /install/install_bazelisk.sh && \
     rm -rf /install
 
 # Configure git safe directories
-RUN git config --global --add safe.directory /opt/tflm && \
-    git config --global --add safe.directory /github/workspace
+RUN git config --global --add safe.directory '*'
