--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -69,6 +69,23 @@ PYTHON_VERSIONS = [
     "3.13",
 ]
 
+pip.whl_mods(
+    additive_build_content = """\
+load("@@//python:tensorflow_cc_targets.bzl", "extra_tensorflow_targets")
+extra_tensorflow_targets()
+""",
+    hub_name = "tflm_pip_deps_whl_mods",
+    whl_name = "tensorflow",
+)
+pip.whl_mods(
+    additive_build_content = """\
+load("@@//python:numpy_cc_targets.bzl", "extra_numpy_targets")
+extra_numpy_targets()
+""",
+    hub_name = "tflm_pip_deps_whl_mods",
+    whl_name = "numpy",
+)
+
 [
     (
         python.toolchain(
@@ -76,9 +93,20 @@ PYTHON_VERSIONS = [
             python_version = version,
         ),
         pip.parse(
+            extra_hub_aliases = {
+                "numpy": ["cc_headers"],
+                "tensorflow": [
+                    "cc_headers",
+                    "cc_library",
+                ],
+            },
             hub_name = "tflm_pip_deps",
             python_version = version,
             requirements_lock = "//python:python_requirements_%s.txt" % version.replace(".", "_"),
+            whl_modifications = {
+                "@tflm_pip_deps_whl_mods//:numpy.json": "numpy",
+                "@tflm_pip_deps_whl_mods//:tensorflow.json": "tensorflow",
+            },
         ),
     )
     for version in PYTHON_VERSIONS
@@ -103,27 +131,5 @@ use_repo(
     "tflm_pip_deps_312_tensorflow",
     "tflm_pip_deps_313_numpy",
     "tflm_pip_deps_313_tensorflow",
+    "tflm_pip_deps_whl_mods",
 )
-
-# Python CC Deps
-
-cc_deps = use_extension("//python:py_pkg_cc_deps.bzl", "cc_deps")
-cc_deps.config(
-    name = "numpy_cc_deps",
-    includes = [
-        "numpy/_core/include",
-        "numpy/core/include",
-    ],
-    pip_repo_template = "tflm_pip_deps_{version}_{pkg}",
-    pkg_name = "numpy",
-    versions = PYTHON_VERSIONS,
-)
-cc_deps.config(
-    name = "tensorflow_cc_deps",
-    includes = ["tensorflow/include"],
-    libs = ["tensorflow/libtensorflow_framework.so.2"],
-    pip_repo_template = "tflm_pip_deps_{version}_{pkg}",
-    pkg_name = "tensorflow",
-    versions = PYTHON_VERSIONS,
-)
-use_repo(cc_deps, "numpy_cc_deps", "tensorflow_cc_deps")
