--- a/signal/tensorflow_core/ops/BUILD
+++ b/signal/tensorflow_core/ops/BUILD
@@ -9,7 +9,7 @@ tflm_signal_kernel_library(
     name = "delay_op",
     srcs = ["delay_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -17,7 +17,7 @@ tflm_signal_kernel_library(
     name = "energy_op",
     srcs = ["energy_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -25,7 +25,7 @@ tflm_signal_kernel_library(
     name = "fft_ops",
     srcs = ["fft_ops.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -33,7 +33,7 @@ tflm_signal_kernel_library(
     name = "filter_bank_ops",
     srcs = ["filter_bank_ops.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -41,7 +41,7 @@ tflm_signal_kernel_library(
     name = "framer_op",
     srcs = ["framer_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -49,7 +49,7 @@ tflm_signal_kernel_library(
     name = "overlap_add_op",
     srcs = ["overlap_add_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -57,7 +57,7 @@ tflm_signal_kernel_library(
     name = "pcan_op",
     srcs = ["pcan_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -65,7 +65,7 @@ tflm_signal_kernel_library(
     name = "stacker_op",
     srcs = ["stacker_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
 
@@ -73,6 +73,6 @@ tflm_signal_kernel_library(
     name = "window_op",
     srcs = ["window_op.cc"],
     deps = [
-        "@tensorflow_cc_deps//:cc_library",
+        "@tflm_pip_deps//tensorflow:cc_library",
     ],
 )
